		   } 
		   ORDER BY ?subject LIMIT 5
	  that are used in the "search terms" interface in the main ORR portal. This query caused 
	  AG to work a 99.9% CPU and without returning any response after an hour or so.
	  So, the default is now "no inference in SPARQL queries".
	  TODO determine mechanism for users to indicate that inference is desired for the query. 

2012-04-02  2.0.23.beta
	- Ag4TripleStore.executeQuery: enable reasoning (which is disabled by default)
	  by including "infer=true" in the request.
	- sample.build.properties: include properties for AG 4.4: agraph.username, agraph.password.
	- Ag4TripleStore._loadSupportingStatements: add supporting statements related with SKOS
	  taking into consideration that AG 4.4 supports owl:SymmetricProperty. 
	- Ag4TripleStore._doUpdate: now including credentials for the request per
	  http://www.franz.com/agraph/support/documentation/4.4/http-protocol.html#header2-223
	
	
2012-03-22  2.0.22.beta
	- More adjustments related with use of new AllegroGraph 4.4

2012-03-27  2.0.21.beta
	- OntSevlet: New "ontology exists" (oe) request dispatched
	- IOntClient.isRegisteredOntologyUri: removed unnecessary acceptEntries parameter.
	- Util.csv2html: implemented in particular to get the HTML version of CSV contents 
	  for AllegroGraph 4.4, which does not provide a direct HTML response format.
	  Used in SparqlDispatcher and Ag4TripleStore

2012-01-06  2.0.20.beta
	- WebContent/sparql.html: use relative URL (/ont?...), which will work in general
	  as well. (besides it facilitates preliminary tests in the current server migration.
	  
	- TripleStore._createTripleStoreInstance: now checks the new "agraph.version" 
	  configuration property ({sample.}build.properties) to determine which AG triple
	  store implementation to use.
	  


2011-12-15  2.0.20.beta
	Starting triple store implementation based on AllegroGraph 4.x, which is a major 
	version change wrt version 3.3, the one we've been using so far.